--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,8 +23,8 @@ stages:
             inputs:
               versionSpec: '16.x'
           - script: |
-              npm install
-              npm run build
+              # npm install
+              # npm run build
             displayName: 'npm install, build and test'
       - job: deploy
         dependsOn: Build
@@ -44,9 +44,10 @@ stages:
                 git pull
                 /home/azureuser/.nvm/versions/node/v16.0.0/bin/npm install
                 /home/azureuser/.nvm/versions/node/v16.0.0/bin/npm run build
-                /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 restart app
                 mkdir -p releases
                 releaseNumber="$(date +"%d-%m-%Y-%H%M%S")"
                 mkdir releases/$releaseNumber
                 cp -a build/.  releases/$releaseNumber/
+                ln -s releases/$releaseNumber/ current/
+                /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart current/ecosystem.json
               failOnStdErr: false
