--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,8 +23,8 @@ stages:
             inputs:
               versionSpec: '16.x'
           - script: |
-              # npm install
-              # npm run build
+              npm install
+              npm run build
             displayName: 'npm install, build and test'
       - job: deploy
         dependsOn: Build
