--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,6 +48,7 @@ stages:
                 releaseNumber="$(date +"%d-%m-%Y-%H%M%S")"
                 mkdir releases/$releaseNumber
                 cp -a build/.  releases/$releaseNumber/
+                rm -rf current/
                 ln -sf /home/azureuser/app/releases/$releaseNumber/ current/
                 /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart current/ecosystem.json
               failOnStdErr: false
