--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,7 +49,6 @@ stages:
                 releaseNumber="$(date +"%d-%m-%Y-%H%M%S")"
                 mkdir releases/$releaseNumber
                 cp -a build/.  releases/$releaseNumber/
-                rm -rf current/*
                 ln -sf /home/azureuser/app/releases/$releaseNumber/ current/
-                /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart ecosystem.json
+                /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart current/ecosystem.json
               failOnStdErr: false
