--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,8 @@ stages:
             inputs:
               sshEndpoint: 'muhaimin-ssh'
               # runOptions: 'commands' 
-              # commands: cd app && git checkout main && git pull && /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart ecosystem.json
+              # commands: cd app && git checkout main && git pull && /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart ecosystem.json rm -rf current/*
+              # /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart ecosystem.json
               runOptions: 'inline'
               inline: |
                 cd app
@@ -49,7 +50,6 @@ stages:
                 releaseNumber="$(date +"%d-%m-%Y-%H%M%S")"
                 mkdir releases/$releaseNumber
                 cp -a build/.  releases/$releaseNumber/
-                rm -rf current/*
+                unlink current/runningRelease
                 ln -sf /home/azureuser/app/releases/$releaseNumber/ current/runningRelease
-                /home/azureuser/.nvm/versions/node/v16.0.0/bin/pm2 startOrRestart ecosystem.json
               failOnStdErr: false
